--- a/notebooks/hamiltonian_simulation.ipynb
+++ b/notebooks/hamiltonian_simulation.ipynb
@@ -902,12 +902,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(Zq[0], Zq[1]): -1, (Zq[1], Zq[2]): -1, (Zq[2], Zq[3]): -1, (Xq[0]): 0.500000000000000, (Xq[1]): 0.500000000000000, (Xq[2]): 0.500000000000000, (Xq[3]): 0.500000000000000}\n"
+     ]
+    }
+   ],
    "source": [
     "# Classical implementation of the time evolution\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "\n",
+    "## Initial state preparation |00...0>\n",
+    "zero_list = [0 for _ in range(2**N)]\n",
+    "zero_list[0] = 1\n",
+    "intial_state = np.array(zero_list)\n",
+    "\n",
+    "## Hamiltonian matrix\n",
+    "ising_ham = get_ising_hamiltonian(N, J, g)\n",
+    "ising_ham.to_sparse_matrix(qubits=[Qubit(i) for i in range(N)]).de\n",
+    "\n",
+    "print(ising_ham)\n",
+    "## Time evolution\n"
    ]
   },
   {
