--- a/notebooks/hamiltonian_simulation.ipynb
+++ b/notebooks/hamiltonian_simulation.ipynb
@@ -1157,12 +1157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_expectation(n_qubit, n_shots, distribution):\n",
-    "    expectation = np.array([0 for _ in range(2 ** n_qubits)])\n",
+    "    expectation = np.array([0. for _ in range(n_qubits)])\n",
     "    for bitstring, frequency in distribution.items():\n",
     "        expectation += np.array(bitstring) * frequency / n_shots\n",
     "    return expectation"
@@ -1170,22 +1170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UFuncTypeError",
-     "evalue": "Cannot cast ufunc 'add' output from dtype('float64') to dtype('int64') with casting rule 'same_kind'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[77], line 68\u001b[0m\n\u001b[1;32m     64\u001b[0m qnx\u001b[38;5;241m.\u001b[39mjobs\u001b[38;5;241m.\u001b[39mwait_for(ref)\n\u001b[1;32m     65\u001b[0m results_noisy \u001b[38;5;241m=\u001b[39m qnx\u001b[38;5;241m.\u001b[39mjobs\u001b[38;5;241m.\u001b[39mresults(ref)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mdownload_result()\n\u001b[0;32m---> 68\u001b[0m ideal_expectation \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_expectation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_qubits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_shots\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresults_ideal\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_distribution\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     69\u001b[0m noisy_expectation \u001b[38;5;241m=\u001b[39m compute_expectation(n_qubits, n_shots, results_noisy\u001b[38;5;241m.\u001b[39mget_distribution())\n\u001b[1;32m     70\u001b[0m Ediff \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(ideal_expectation \u001b[38;5;241m-\u001b[39m noisy_expectation)\n",
-      "Cell \u001b[0;32mIn[44], line 4\u001b[0m, in \u001b[0;36mcompute_expectation\u001b[0;34m(n_qubit, n_shots, distribution)\u001b[0m\n\u001b[1;32m      2\u001b[0m expectation \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m n_qubits)])\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m bitstring, frequency \u001b[38;5;129;01min\u001b[39;00m distribution\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m----> 4\u001b[0m     expectation \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(bitstring) \u001b[38;5;241m*\u001b[39m frequency \u001b[38;5;241m/\u001b[39m n_shots\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m expectation\n",
-      "\u001b[0;31mUFuncTypeError\u001b[0m: Cannot cast ufunc 'add' output from dtype('float64') to dtype('int64') with casting rule 'same_kind'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import qnexus as qnx\n",
     "from quantinuum_schemas.models.h_series_noise import UserErrorParams\n",
@@ -1197,24 +1184,25 @@
     "\n",
     "# define parameters\n",
     "t = 2\n",
-    "n_qubits = 2\n",
+    "n_qubits = 3\n",
     "J = 1.2\n",
     "g = 1\n",
     "n_shots = 100\n",
-    "n_trotter_steps = range(1, 100,10)\n",
-    "p2_list = np.linspace(0, 0.1, num=5, endpoint=True)\n",
+    "n_trotter_steps = range(1, 100, 15)\n",
+    "p2_list = np.linspace(0, 0.3, num=10, endpoint=True)\n",
     "job_name_suffix = datetime.datetime.now().strftime(\"%Y_%m_%d-%H-%M-%S\")\n",
     "\n",
-    "results = np.array([])\n",
+    "results = []\n",
     "for i, n_steps in enumerate(n_trotter_steps):\n",
     "    # build ising model\n",
-    "    ising_circuit = Circuit(n_qubits)\n",
+    "    ising_circuit = Circuit(n_qubits).H(0).H(1)\n",
     "    for j in range(n_steps):\n",
     "        # Each step\n",
     "        for k in range(n_qubits-1):\n",
     "            ising_circuit.ZZPhase(2 * (-J) * t / n_steps, k, k + 1)\n",
     "        for k in range(n_qubits):\n",
     "            ising_circuit.Rx(2 * g * t / n_steps, k)\n",
+    "    ising_circuit.measure_all()\n",
     "    \n",
     "    # upload ising circuit\n",
     "    ref_nma = qnx.circuits.upload(ising_circuit, name=f\"nma-ising-circuit-{n_steps}\")\n",
@@ -1235,7 +1223,7 @@
     "            name=f\"nma-execution-job-{job_name_suffix}-{i}\",\n",
     "            circuits=[ref_compile_circuit_nma],\n",
     "            backend_config=noiseless_config,\n",
-    "            n_shots=[100]\n",
+    "            n_shots=[300]\n",
     "        )\n",
     "\n",
     "    qnx.jobs.wait_for(ref_execute_job_nma)\n",
@@ -1248,7 +1236,7 @@
     "                name=f\"nma-execution-job-noisy-{job_name_suffix}-{i}-{j}\",\n",
     "                circuits=[ref_compile_circuit_nma],\n",
     "                backend_config=noise_config,\n",
-    "                n_shots=[100]\n",
+    "                n_shots=[300]\n",
     "            )\n",
     "        qnx.jobs.wait_for(ref)\n",
     "        results_noisy = qnx.jobs.results(ref)[0].download_result()\n",
@@ -1264,33 +1252,14 @@
     "\n",
     "fig = plt.figure(figsize=(8, 6))\n",
     "ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "results = np.stack(results)\n",
     "\n",
     "x = results[:, 0]\n",
     "y = results[:, 1]\n",
     "z = results[:, 2]\n",
     "\n",
-    "ax.plot_trisurf(x,y,z)\n",
+    "ax.plot_trisurf(x,y,z, cmap=cm.Blues)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(): 1.0}"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results_ideal.get_distribution()"
    ]
   },
   {
