--- a/notebooks/an_intro_to_pytket.ipynb
+++ b/notebooks/an_intro_to_pytket.ipynb
@@ -67,7 +67,7 @@
        "\n",
        "\n",
        "\n",
-       "<div style=\"resize: vertical; overflow: auto; height: 300px; display: block\">\n",
+       "<div style=\"resize: vertical; overflow: auto; height: 400px; display: block\">\n",
        "    <iframe srcdoc=\"\n",
        "&lt;!DOCTYPE html&gt;\n",
        "&lt;html lang=&#34;en&#34;&gt;\n",
@@ -82,7 +82,7 @@
        "&lt;body&gt;\n",
        "\n",
        "\n",
-       "    &lt;div id=&#34;circuit-display-vue-container-467b127b-2d06-4d18-9e1c-e2014361e025&#34; class=&#34;pytket-circuit-display-container&#34;&gt;\n",
+       "    &lt;div id=&#34;circuit-display-vue-container-52e65013-a676-4c81-9044-bf891e303295&#34; class=&#34;pytket-circuit-display-container&#34;&gt;\n",
        "        &lt;div style=&#34;display: none&#34;&gt;\n",
        "            &lt;div id=&#34;circuit-json-to-display&#34;&gt;{&#34;bits&#34;: [], &#34;commands&#34;: [{&#34;args&#34;: [[&#34;q&#34;, [0]]], &#34;op&#34;: {&#34;type&#34;: &#34;H&#34;}}, {&#34;args&#34;: [[&#34;q&#34;, [0]], [&#34;q&#34;, [1]]], &#34;op&#34;: {&#34;type&#34;: &#34;CX&#34;}}], &#34;created_qubits&#34;: [], &#34;discarded_qubits&#34;: [], &#34;implicit_permutation&#34;: [[[&#34;q&#34;, [0]], [&#34;q&#34;, [0]]], [[&#34;q&#34;, [1]], [&#34;q&#34;, [1]]]], &#34;phase&#34;: &#34;0.0&#34;, &#34;qubits&#34;: [[&#34;q&#34;, [0]], [&#34;q&#34;, [1]]]}&lt;/div&gt;\n",
        "        &lt;/div&gt;\n",
@@ -93,8 +93,8 @@
        "        &gt;&lt;/circuit-display-container&gt;\n",
        "    &lt;/div&gt;\n",
        "    &lt;script type=&#34;application/javascript&#34;&gt;\n",
-       "      const circuitRendererUid = &#34;467b127b-2d06-4d18-9e1c-e2014361e025&#34;;\n",
-       "      const displayOptions = JSON.parse(&#39;{&#34;zxStyle&#34;: false, &#34;condenseCBits&#34;: false, &#34;cropParams&#34;: false}&#39;);\n",
+       "      const circuitRendererUid = &#34;52e65013-a676-4c81-9044-bf891e303295&#34;;\n",
+       "      const displayOptions = JSON.parse(&#39;{&#34;zxStyle&#34;: false, &#34;cropParams&#34;: false}&#39;);\n",
        "\n",
        "      // Script to initialise the circuit renderer app\n",
        "\n",
@@ -212,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({(1, 1): 506, (0, 0): 494})\n"
+      "Counter({(1, 1): 503, (0, 0): 497})\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
        "\n",
        "\n",
        "\n",
-       "<div style=\"resize: vertical; overflow: auto; height: 300px; display: block\">\n",
+       "<div style=\"resize: vertical; overflow: auto; height: 400px; display: block\">\n",
        "    <iframe srcdoc=\"\n",
        "&lt;!DOCTYPE html&gt;\n",
        "&lt;html lang=&#34;en&#34;&gt;\n",
@@ -278,7 +278,7 @@
        "&lt;body&gt;\n",
        "\n",
        "\n",
-       "    &lt;div id=&#34;circuit-display-vue-container-c67eb157-36bf-4d11-935f-7f5e866e0e07&#34; class=&#34;pytket-circuit-display-container&#34;&gt;\n",
+       "    &lt;div id=&#34;circuit-display-vue-container-b8d46089-ef24-4846-a3b2-1dcf29ef46f1&#34; class=&#34;pytket-circuit-display-container&#34;&gt;\n",
        "        &lt;div style=&#34;display: none&#34;&gt;\n",
        "            &lt;div id=&#34;circuit-json-to-display&#34;&gt;{&#34;bits&#34;: [], &#34;commands&#34;: [{&#34;args&#34;: [[&#34;q&#34;, [0]]], &#34;op&#34;: {&#34;type&#34;: &#34;H&#34;}}, {&#34;args&#34;: [[&#34;q&#34;, [0]], [&#34;q&#34;, [1]]], &#34;op&#34;: {&#34;type&#34;: &#34;CX&#34;}}, {&#34;args&#34;: [[&#34;q&#34;, [1]], [&#34;q&#34;, [2]]], &#34;op&#34;: {&#34;type&#34;: &#34;CX&#34;}}, {&#34;args&#34;: [[&#34;q&#34;, [2]], [&#34;q&#34;, [3]]], &#34;op&#34;: {&#34;type&#34;: &#34;CX&#34;}}], &#34;created_qubits&#34;: [], &#34;discarded_qubits&#34;: [], &#34;implicit_permutation&#34;: [[[&#34;q&#34;, [0]], [&#34;q&#34;, [0]]], [[&#34;q&#34;, [1]], [&#34;q&#34;, [1]]], [[&#34;q&#34;, [2]], [&#34;q&#34;, [2]]], [[&#34;q&#34;, [3]], [&#34;q&#34;, [3]]]], &#34;phase&#34;: &#34;0.0&#34;, &#34;qubits&#34;: [[&#34;q&#34;, [0]], [&#34;q&#34;, [1]], [&#34;q&#34;, [2]], [&#34;q&#34;, [3]]]}&lt;/div&gt;\n",
        "        &lt;/div&gt;\n",
@@ -289,8 +289,8 @@
        "        &gt;&lt;/circuit-display-container&gt;\n",
        "    &lt;/div&gt;\n",
        "    &lt;script type=&#34;application/javascript&#34;&gt;\n",
-       "      const circuitRendererUid = &#34;c67eb157-36bf-4d11-935f-7f5e866e0e07&#34;;\n",
-       "      const displayOptions = JSON.parse(&#39;{&#34;zxStyle&#34;: false, &#34;condenseCBits&#34;: false, &#34;cropParams&#34;: false}&#39;);\n",
+       "      const circuitRendererUid = &#34;b8d46089-ef24-4846-a3b2-1dcf29ef46f1&#34;;\n",
+       "      const displayOptions = JSON.parse(&#39;{&#34;zxStyle&#34;: false, &#34;cropParams&#34;: false}&#39;);\n",
        "\n",
        "      // Script to initialise the circuit renderer app\n",
        "\n",
@@ -1669,9 +1669,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1683,9 +1683,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
